sc/source/core/data/drwlayer.cxx
@@ -669,6 +669,8 @@ void ScDrawLayer::SetPageSize(sal_uInt16 nPageNo, const Size& rSize, bool bUpdat
     // Disable mass broadcasts from drawing objects' position changes.
     bool bWasLocked = isLocked();
     setLock(true);
+    bool bWasIgnoring = isIgnoringDeferredObjectChanges();
+    setIgnoreDeferredObjectChanges(true);
 
     for (const rtl::Reference<SdrObject>& pObj : *pPage)
     {
@@ -710,6 +712,7 @@ void ScDrawLayer::SetPageSize(sal_uInt16 nPageNo, const Size& rSize, bool bUpdat
         }
     }
 
+    setIgnoreDeferredObjectChanges(bWasIgnoring);
     setLock(bWasLocked);
 }
 
