svx/source/svdraw/svdobj.cxx
@@ -1035,7 +1035,7 @@ void SdrObject::RecalcBoundRect()
 
 void SdrObject::BroadcastObjectChange() const
 {
-    if ((getSdrModelFromSdrObject().isLocked()) || getSdrModelFromSdrObject().IsInDestruction() || comphelper::IsFuzzing())
+    if (getSdrModelFromSdrObject().IsInDestruction() || comphelper::IsFuzzing())
         return;
 
     bool bPlusDataBroadcast(m_pPlusData && m_pPlusData->pBroadcast);
@@ -1043,6 +1043,13 @@ void SdrObject::BroadcastObjectChange() const
 
     if(!(bPlusDataBroadcast || bObjectChange))
         return;
+
+    // Only check if we want to defer, after we decided that we really need to broadcast something
+    if (getSdrModelFromSdrObject().isLocked())
+    {
+        getSdrModelFromSdrObject().addDeferredObjectChanges(this);
+        return;
+    }
 
     SdrHint aHint(SdrHintKind::ObjectChange, *this);
 
